--- a/blog/src/_includes/components/featured-posts-en.njk
+++ b/blog/src/_includes/components/featured-posts-en.njk
@@ -5,13 +5,8 @@
    Displays featured blog posts in English only
    ======================================================================== #}
 
-{# Filter featured posts for English language manually #}
-{% set featuredSlides = [] %}
-{% for post in collections.featuredPosts %}
-  {% if post.data.lang == "en" %}
-    {% set featuredSlides = (featuredSlides.push(post), featuredSlides) %}
-  {% endif %}
-{% endfor %}
+{# Use language-specific featured posts collection #}
+{% set featuredSlides = collections.featuredPostsEN %}
 
 {# Only render if we have English featured posts #}
 {% if featuredSlides | length > 0 %}
