refactor media source tags to sourceset tags for dpi-sensitive image scaling

--- a/blog/src/_includes/components/featured-posts-en.njk
+++ b/blog/src/_includes/components/featured-posts-en.njk
@@ -36,21 +36,13 @@
                         <a href="{{ post.url | url }}" class="featured-photo-link" aria-label="Read {{ post.data.title }}">
                             {% if post.data.image %}
                             <picture>
-                                {% if post.data.imageHigh %}
-                                <source media="(min-width: 1920px)" srcset="{{ post.data.imageHigh }}">
-                                {% endif %}
-                                {% if post.data.imageDesktop %}
-                                <source media="(min-width: 1280px)" srcset="{{ post.data.imageDesktop }}">
-                                {% endif %}
-                                {% if post.data.imageTablet %}
-                                <source media="(min-width: 769px)" srcset="{{ post.data.imageTablet }}">
-                                {% endif %}
-                                {% if post.data.imageMobile %}
-                                <source media="(max-width: 768px)" srcset="{{ post.data.imageMobile }}">
-                                {% endif %}
-                                <img 
-                                    src="{{ post.data.image }}" 
+                                <source type="image/webp"
+                                        srcset="{{ post.data.image }} 640w{% if post.data.imageMobile %}, {{ post.data.imageMobile }} 768w{% endif %}{% if post.data.imageTablet %}, {{ post.data.imageTablet }} 1024w{% endif %}{% if post.data.imageDesktop %}, {{ post.data.imageDesktop }} 1280w{% endif %}{% if post.data.imageHigh %}, {{ post.data.imageHigh }} 1920w{% endif %}"
+                                        sizes="(max-width: 768px) 100vw, 60vw">
+                                <img
+                                    src="{{ post.data.image }}"
                                     alt="{{ post.data.imageAlt or post.data.title }}"
+                                    width="640" height="427"
                                     loading="{{ loadingStrategy }}"
                                     {% if isFirstSlide %}fetchpriority="high"{% endif %}
                                     class="featured-image"
