--- a/css/certifications.css
+++ b/css/certifications.css
@@ -26,11 +26,12 @@
     height: 100%;
     object-fit: cover;
     object-position: center;
+    filter: saturate(0.95);
 }
 
 .cert-hero-overlay {
     position: absolute;
-    opacity: 0.25;
+    opacity: 0.15;
     top: 0;
     left: 0;
     width: 100%;
