add certifications dropdown to blog version of the navbar and update footer sitemap to match

--- a/blog/src/_includes/layouts/base.njk
+++ b/blog/src/_includes/layouts/base.njk
@@ -144,6 +144,12 @@
                 <li><a href="{% if lang == 'es' %}/es/about.html{% else %}/about.html{% endif %}" class="navbar-link" data-i18n="common:nav.about">About</a></li>
                 <li><a href="{% if lang == 'es' %}/es/classes.html{% else %}/classes.html{% endif %}" class="navbar-link" data-i18n="common:nav.classes">Classes</a></li>
                 <li><a href="{% if lang == 'es' %}/es/events.html{% else %}/events.html{% endif %}" class="navbar-link" data-i18n="common:nav.events">Events</a></li>
+                <li class="has-dropdown">
+                    <span class="navbar-link dropdown-trigger" role="button" aria-haspopup="true" aria-expanded="false" tabindex="0" data-i18n="common:nav.certifications">Certifications <i data-lucide="chevron-down" class="dropdown-icon"></i></span>
+                    <div class="nav-dropdown" role="menu">
+                        <a href="{% if lang == 'es' %}/es/certifications/aerial-yoga-100.html{% else %}/certifications/aerial-yoga-100.html{% endif %}" class="nav-dropdown-item" role="menuitem" data-i18n="common:nav.certificationsDropdown.aerial100">100-Hour Aerial Yoga Teacher Training</a>
+                    </div>
+                </li>
                 <li><a href="{% if lang == 'es' %}/blog/dist/es/{% else %}/blog/dist/{% endif %}" class="navbar-link active" data-i18n="common:nav.blog">Blog</a></li>
             </ul>
         </div>
@@ -206,6 +212,7 @@
                             <li><a href="{% if lang == 'es' %}/es/about.html{% else %}/about.html{% endif %}" data-i18n="common:footer.sitemap.about">About</a></li>
                             <li><a href="{% if lang == 'es' %}/es/classes.html{% else %}/classes.html{% endif %}" data-i18n="common:footer.sitemap.classes">Classes</a></li>
                             <li><a href="{% if lang == 'es' %}/es/events.html{% else %}/events.html{% endif %}" data-i18n="common:footer.sitemap.events">Events</a></li>
+                            <li><a href="{% if lang == 'es' %}/es/certifications/aerial-yoga-100.html{% else %}/certifications/aerial-yoga-100.html{% endif %}" data-i18n="common:footer.sitemap.certifications">Certifications</a></li>
                             <li><a href="{% if lang == 'es' %}/blog/dist/es/{% else %}/blog/dist/{% endif %}" data-i18n="common:footer.sitemap.blog">Blog</a></li>
                         </ul>
                     </div>
