fix certification chevron navbar rendering issue

--- a/blog/src/_includes/layouts/base.njk
+++ b/blog/src/_includes/layouts/base.njk
@@ -145,7 +145,7 @@
                 <li><a href="{% if lang == 'es' %}/es/classes.html{% else %}/classes.html{% endif %}" class="navbar-link" data-i18n="common:nav.classes">Classes</a></li>
                 <li><a href="{% if lang == 'es' %}/es/events.html{% else %}/events.html{% endif %}" class="navbar-link" data-i18n="common:nav.events">Events</a></li>
                 <li class="has-dropdown">
-                    <span class="navbar-link dropdown-trigger" role="button" aria-haspopup="true" aria-expanded="false" tabindex="0" data-i18n="common:nav.certifications">Certifications <i data-lucide="chevron-down" class="dropdown-icon"></i></span>
+                    <button class="navbar-link dropdown-trigger" aria-haspopup="true" aria-expanded="false"><span data-i18n="common:nav.certifications">Certifications</span> <i data-lucide="chevron-down" class="dropdown-icon"></i></button>
                     <div class="nav-dropdown" role="menu">
                         <a href="{% if lang == 'es' %}/es/certifications/aerial-yoga-100.html{% else %}/certifications/aerial-yoga-100.html{% endif %}" class="nav-dropdown-item" role="menuitem" data-i18n="common:nav.certificationsDropdown.aerial100">100-Hour Aerial Yoga Teacher Training</a>
                     </div>
